Add more numerical results

--- a/OFDM/Course Report/00main.tex
+++ b/OFDM/Course Report/00main.tex
@@ -65,7 +65,7 @@
 \section{Synchronization and Pilot Symbols Aided Channel Estimation}
 \input{03sec3.tex}
 
-\section{Numerical Results}
+\section{Simulation Results}
 \input{04sec4.tex}
 
 \section{Conclusion}
