MInor Fix of a Major Formula

--- a/OFDM/Course Report/02sec2.tex
+++ b/OFDM/Course Report/02sec2.tex
@@ -160,7 +160,7 @@ If $\abs{f\tau_{l_i}-f\tau_{l_j}}=\frac{4k-1}{2}$ for some integer $k$, then $\s
 \begin{figure}[!htbp]
     \centering
     \includegraphics[width=\linewidth]{ffading.eps}
-    \caption{Two paths with different delays and amplitudes.}
+    \caption{Ten paths with different amplitudes.}
     \label{fig:ffading}
 \end{figure}
 
@@ -190,7 +190,7 @@ The~\cref{eq:papr_prob} states the PAPR will exceed certain threshold with high 
 \begin{figure}[!htbp]
     \centering
     \includegraphics[width=\linewidth]{PAPR.eps}
-    \caption{BPSK, $1000$ OFDM symbols.}
+    \caption{BPSK, Average of $5$ simulations for each number of subcarriers.}
     \label{fig:PAPR}
 \end{figure}
 
