--- a/OFDM/Course Report/03sec3.tex
+++ b/OFDM/Course Report/03sec3.tex
@@ -21,7 +21,8 @@ There are many ways to insert the pilot symbol. It can be interpolated purely in
     \item If the pilot symbol has magnitude $A$, while the received signal detect the pilot symbol with magnitude $A'$, the receiver can estimate the channel gain by the ratio of $A$ and $A'$.
 \end{enumerate*}
 
-The pilot symbol method is an effective and flexible technique. The occupancy of bandwidth does reduce the spectral efficiency, but the performance gain is significant. The pilot symbol method is widely used in the OFDM system. The channel estimation not only helps the synchronization but also improves the performance of other signal processing techniques, such as equalization, beamforming, and precoding. The~\cref{fig:pilot} shows the channel estimation aided by pilot symbols.
+The pilot symbol method is an effective and flexible technique. The occupancy of bandwidth does reduce the spectral efficiency, but the performance gain is significant. The pilot symbol method is widely used in the OFDM system. The channel estimation not only helps the synchronization but also improves the performance of other signal processing techniques, such as equalization, beamforming, and precoding.
+The~\cref{fig:pilot} shows the channel estimation aided by pilot symbols.
 
 \begin{figure}[!htbp]
     \centering
