--- a/ECE226/Quiz and HW/HW.tex
+++ b/ECE226/Quiz and HW/HW.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage[
-    % letterpaper,
+    letterpaper,
     margin=1in,
     % headheight=13.6pt,
 ]{geometry}
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 
 %%%% Load Format %%%%
-\input{../Formats/format.tex}
-\input{../Formats/Macro.tex}
+\input{../../Formats/Format.tex}
+\input{../../Formats/Macro.tex}
 \allowdisplaybreaks
 
 %%%% Theorem Style %%%%
