--- a/Example/Pages/main.tex
+++ b/Example/Pages/main.tex
@@ -18,6 +18,8 @@
 \fancyfoot[L]{}
 \fancyfoot[C]{\thepage}
 \fancyfoot[R]{}
+\renewcommand{\headrulewidth}{0pt}%
+\renewcommand{\footrulewidth}{0pt}%
 }
 \pagestyle{plain}
 
