--- a/Example/Pages/main.tex
+++ b/Example/Pages/main.tex
@@ -27,6 +27,7 @@
 \input{../../Formats/Format.tex}
 \input{../../Formats/Macro.tex}
 \allowdisplaybreaks
+\addto\captionsenglish{\renewcommand{\figurename}{Fig.}}
 
 %%%% Theorem Style %%%%
 \declaretheorem[numbered=no, style=plain]{axiom, lemma}
